# custom-clip

./: .gitignore  README.md  demo.py  pyproject.toml
analysis/: download_models.py  evaluation.py  evaluation_prep.py  load_models.py  projection.py
data/: create_validation_dataset_from_shards.py  download_faces.py  image_downloader.py  web_dataset.py
train/: config_schema.py  data_handling_webdataset.py  download_encoders.py  load_encoders.py  train.py
train/configs/: example_config.yaml
